# home-net-inventory

./: .gitignore  Developer_Notes.md  Development_Notes.md  Dockerfile  Host_Container_in_Proxmox_VE_VM.md  Makefile  README.md  REST_API.md  docker-compose.yml  pyproject.toml  update
app/: config.py  db.py  main.py  models.py  scanner.py
host/proxmox/: make-debian13-template
templates/: devices.html  devices_table.html
tests/: conftest.py  test_api.py  test_scan_api.py  test_scanner.py
